<?xml version="1.0"?>
<package>
  <name>knowrob_planning</name>
  <version>0.1.0</version>
  <description>Planning and configuration in technical domains.</description>
  <maintainer email="danielb@cs.uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author>Daniel Beßler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_bootstrap</build_depend>
  <build_depend>rosjava_messages</build_depend>
  -->
  <build_depend>knowrob_common</build_depend>

  <!--
  <run_depend>rosjava_build_tools</run_depend>
  <run_depend>rosjava_bootstrap</run_depend>
  -->
  <run_depend>knowrob_common</run_depend>

</package>
